FIX: resolving dark mode font #65

--- a/src/assets/sass/chat/_input.scss
+++ b/src/assets/sass/chat/_input.scss
@@ -25,7 +25,7 @@ form {
     outline: none;
     border-radius: 40px;
     padding-left: 32px;
-    color: white;
+    color: var(--text-color);
 }
 
 .input-prompt::placeholder {
